--- a/tack/Templates/CreateBoard.html
+++ b/tack/Templates/CreateBoard.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
         <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
 		<link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
+        <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
+    <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
+
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title></title>
 </head>
@@ -32,5 +37,9 @@
             </div>
         </section>
     </div>
+<div class="ui button">
+  Follow
+</div>
+
 </body>
 </html>
