--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -2,26 +2,47 @@
 <html>
 <head>
     <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
+
+    <script type="text/javascript">
+		$(document).ready(function(){
+			$("#submitboard").click(function(){
+				event.preventDefault();
+				var data = $('form#boardform').serialize();
+				$.post('/saveBoard', data, function(msg) {
+					if (msg.result == "success"){
+                        $("#boardform").fadeOut(500);
+                        var bn = (document).getElementById("newboardname").value;
+                        var n = (document).getElementById("newboard");
+                        n.value = bn;
+                    }
+                    else {
+                        alert(msg);
+                    }
+				});
+			});
+		});
+	</script>
+
     <script type="text/javascript">
         $(document).ready(function(){
         //open popup
         $("#createBoard").click(function(){
-          $("#overlay_form").fadeIn(1000);
+          $("#boardform").fadeIn(1000);
           positionPopup();
         });
 
         //close popup
         $("#close").click(function(){
-            $("#overlay_form").fadeOut(500);
+            $("#boardform").fadeOut(500);
         });
         });
 
         //position the popup at the center of the page
         function positionPopup(){
-          if(!$("#overlay_form").is(':visible')){
+          if(!$("#boardform").is(':visible')){
             return;
           }
-          $("#overlay_form").css({
+          $("#boardform").css({
               left: ($(window).width() - $('#overlay_form').width()) / 2,
               top: ($(window).width() - $('#overlay_form').width()) / 7,
               position:'absolute'
@@ -33,7 +54,7 @@
 
         </script>
         <style>
-        #overlay_form{
+        #boardform{
             position: absolute;
             border: 5px solid gray;
             font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
@@ -92,13 +113,14 @@
                         <label for="tags">Tags:</label>
                         <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
                         <label for="board">Add to Existing Board:</label>
-                        <select name="board">
+                        <select name="ex_board">
                             <option value=""></option>
                             {% for board in boards %}
                                 <option value="{{ board.Name }}">{{ board.Name }}</option>
                             {% endfor %}
                         </select><br>
                         <a href="#" id="createBoard"> OR Create New Board</a>
+                        <input id="newboard" name="new_board" type="hidden">
                             <br />
 
                         <input type="submit" name="submit" value="Create!">
@@ -111,14 +133,14 @@
     </div>
 </body>
 </html>
-<form id="overlay_form" action="/saveBoard" style="display:none" method="post" enctype="multipart/form-data" >
+<form name="boardform" id="boardform" style="display:none" method="post" enctype="multipart/form-data" >
     <label for="board_name">Name:</label>
-    <input type="text" name="board_name" placeholder="Name for your Board"></br>
+    <input type="text" id="newboardname" name="board_name" placeholder="Name for your Board"></br>
     <label for="board_desc">Description:</label>
     <input type="text" name="board_desc" placeholder="Description for your Board"></br>
     <label for="board_privacy">Board Visibility:</label><br>
     <input type="radio" name="board_privacy" value="private">Private
     <input type="radio" name="board_privacy" value="public">Public<br>
-    <input type="submit" name="submit" value="Create Board!">
+    <input id="submitboard" type="button" name="submitboard" value="Create Board!">
     <a href="#" id="close">Close</a>
 </form>
