--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -4,12 +4,12 @@
     <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
 
     <script type="text/javascript">
-		$(document).ready(function(){
-			$("#submitboard").click(function(){
-				event.preventDefault();
-				var data = $('form#boardform').serialize();
-				$.post('/saveBoard', data, function(msg) {
-					if (msg.result == "success"){
+        $(document).ready(function(){
+            $("#submitboard").click(function(){
+                event.preventDefault();
+                var data = $('form#boardform').serialize();
+                $.post('/saveBoard', data, function(msg) {
+                    if (msg.result == "success"){
                         $("#boardform").fadeOut(500);
                         var bn = (document).getElementById("newboardname").value;
                         var n = (document).getElementById("newboard");
@@ -18,122 +18,180 @@
                     else {
                         alert(msg);
                     }
-				});
-			});
-		});
-	</script>
+                });
+            });
+        });
+    </script>
 
     <script type="text/javascript">
         $(document).ready(function(){
-        //open popup
-        $("#createBoard").click(function(){
-          $("#boardform").fadeIn(1000);
-          positionPopup();
-        });
+            //open popup
+            $("#createBoard").click(function(){
+                $("#boardform").fadeIn(1000);
+                positionPopup();
+            });
 
-        //close popup
-        $("#close").click(function(){
-            $("#boardform").fadeOut(500);
-        });
+            //close popup
+            $("#close").click(function(){
+                $("#boardform").fadeOut(500);
+            });
         });
 
         //position the popup at the center of the page
         function positionPopup(){
-          if(!$("#boardform").is(':visible')){
-            return;
-          }
-          $("#boardform").css({
-              left: ($(window).width() - $('#overlay_form').width()) / 2,
-              top: ($(window).width() - $('#overlay_form').width()) / 7,
-              position:'absolute'
-          });
+            if(!$("#boardform").is(':visible')){
+                return;
+            }
+            $("#boardform").css({
+                left: ($(window).width() - $('#boardform').width()) / 2,
+                top: ($(window).width() - $('#boardform').width()) / 7,
+                position:'absolute'
+            });
         }
 
         //maintain the popup at center of the page when browser resized
         $(window).bind('resize',positionPopup);
 
-        </script>
-        <style>
+    </script>
+    <style>
         #boardform{
             position: absolute;
             border: 5px solid gray;
             font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-	        font-weight: 400;
-	        font-size: 15px;
-	        color: #1d3c41;
-	        overflow-y: scroll;
+            font-weight: 400;
+            font-size: 15px;
+            color: #1d3c41;
+            overflow-y: scroll;
             border-radius: 5px;
             padding: 10px;
             background: white;
-            width: 270px;
-            height: 190px;
+            width: auto;
+            height: auto;
         }
         #createBoard{
             display: block;
-            width: 200px;
+            width: auto;
             text-align: center;
             padding: 6px;
             border-radius: 5px;
             text-decoration: none;
             margin: 0 auto;
         }
-        </style>
+    </style>
     <meta charset="UTF-8" />
-        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
 
-        <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">
-        <script type="text/javascript" src="/static/shadowbox/shadowbox.js"></script>
-        <script type="text/javascript">
+    <script type="text/javascript">
+        $('.ui.selection.dropdown')
+            .dropdown()
+        ;
+    </script>
+    <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
+    <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">
+    <script type="text/javascript" src="/static/shadowbox/shadowbox.js"></script>
+    <script type="text/javascript">
         Shadowbox.init();
-        </script>
-        <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
-		<link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
+    </script>
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
 
-
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Create Tack</title>
 </head>
 <body>
-    <h1>
+<div class="ui inverted tiered menu">
+    <div class="right menu">
+        <div class="item">
+            <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
+        </div>
+        <div class="item">
+            <a class="item" href="/">
+                <i class="home icon"></i> Home
+            </a>
+        </div>
+        <div class="ui simple dropdown item">
+            <i class="bookmark icon"></i>Actions<i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="/createtack">Create Tack</a>
+                <a class="item" href="/createboard">Create Board</a>
+            </div>
+        </div>
+        <div class="ui simple dropdown item">
+            <i class="user icon"></i>User<i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="/logout">Logout</a>
+                <a class="item" href="/update">Update Profile</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <section>
+        <div id="container_demo">
+            <div id="wrapper">
+                <div id="createtack" class="ui form segment" >
+                    <form action="/saveTack" method="post" enctype="multipart/form-data">
+                        <div class="field">
+                            <label for="tack_name">Filename:</label>
+                            <div class="input">
+                                <input type="text" name="tack_name" placeholder="Name for your Tack"></br>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label for="file">Image:</label>
+                            <div class="input">
+                                <input type="file" name="file" id="file" required="required" accept="image/*"><br>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label for="tack_url">URL:</label>
+                            <div class="input">
+                                <input type="url" name="tack_url" placeholder="URL to tack"></br>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label for="tags">Tags:</label>
+                            <div class="input">
+                                <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label>Add to Existing Board:</label>
+{#                            <div class="ui selection dropdown">#}
+{#                                <input type="hidden" name="ex_board">#}
+{#                                <div class="default text">Add to Existing Board:</div>#}
+{#                                <i class="dropdown icon"></i>#}
+{#                                <div class="menu">#}
+{#                                    {% for board in boards %}#}
+{#                                        <div class="item" data-value="{{ board.Name }}">{{ board.Name }}</div>#}
+{#                                    {% endfor %}#}
+{#                                </div>#}
+{#                            </div>#}
 
-    </h1>
-    <div class="container">
-        <section>
-            <div id="container_demo">
-                <div id="wrapper">
-                    <div id="createtack" class="animate form" >
-                        <form action="/saveTack" method="post" enctype="multipart/form-data">
-                        <label for="tack_name">Filename:</label>
-                        <input type="text" name="tack_name" placeholder="Name for your Tack"></br>
-                        <label for="file">Image:</label>
-                        <input type="file" name="file" id="file" required="required" accept="image/*"><br>
-                        <label for="tack_url">URL:</label>
-                        <input type="url" name="tack_url" placeholder="URL to tack"></br>
-                        <label for="tags">Tags:</label>
-                        <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
-                        <label for="board">Add to Existing Board:</label>
-                        <select name="ex_board">
-                            <option value=""></option>
-                            {% for board in boards %}
-                                <option value="{{ board.Name }}">{{ board.Name }}</option>
-                            {% endfor %}
-                        </select><br>
+                                                        <select name="ex_board">
+                                                            <option value=""></option>
+                                                            {% for board in boards %}
+                                                                <option value="{{ board.Name }}">{{ board.Name }}</option>
+                                                            {% endfor %}
+                                                        </select><br>
+                        </div>
                         <a href="#" id="createBoard"> OR Create New Board</a>
                         <input id="newboard" name="new_board" type="hidden">
-                            <br />
+                        <br />
 
-                        <input type="submit" name="submit" value="Create!">
-                        </form>
-                    </div>
+                        <input class="ui button blue" type="submit" name="submit" value="Create!">
+                    </form>
                 </div>
-
             </div>
-        </section>
-    </div>
+
+        </div>
+    </section>
+</div>
 </body>
 </html>
-<form name="boardform" id="boardform" style="display:none" method="post" enctype="multipart/form-data" >
+<form class="ui form segment" name="boardform" id="boardform" style="display:none" method="post" enctype="multipart/form-data" >
     <label for="board_name">Name:</label>
     <input type="text" id="newboardname" name="board_name" placeholder="Name for your Board"></br>
     <label for="board_desc">Description:</label>
@@ -141,6 +199,8 @@
     <label for="board_privacy">Board Visibility:</label><br>
     <input type="radio" name="board_privacy" value="private">Private
     <input type="radio" name="board_privacy" value="public">Public<br>
-    <input id="submitboard" type="button" name="submitboard" value="Create Board!">
+    <input class="ui button blue" id="submitboard" type="button" name="submitboard" value="Create Board!"><br>
     <a href="#" id="close">Close</a>
 </form>
+
+
