--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -7,163 +7,73 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style4.css" />
 
     <title>Tackshare</title>
-{#        <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">#}
-{#        <script type="text/javascript" src="/static/shadowbox/shadowbox.js"></script>#}
-{#        <link rel="stylesheet" href="/static/css/bStyle.css" type="text/css" media="screen">#}
-{#        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>#}
-{#        <script type="text/javascript">#}
-{#        Shadowbox.init();#}
-{#        </script>#}
-{#        <script type="text/javascript">#}
-{#            jQuery(window).load(function() {#}
-{##}
-{#        $("#nav > li > a").click(function (e) { // binding onclick#}
-{#            if ($(this).parent().hasClass('selected')) {#}
-{#                $("#nav .selected div div").slideUp(100); // hiding popups#}
-{#                $("#nav .selected").removeClass("selected");#}
-{#            } else {#}
-{#                $("#nav .selected div div").slideUp(100); // hiding popups#}
-{#                $("#nav .selected").removeClass("selected");#}
-{##}
-{#                if ($(this).next(".subs").length) {#}
-{#                    $(this).parent().addClass("selected"); // display popup#}
-{#                    $(this).next(".subs").children().slideDown(200);#}
-{#                }#}
-{#            }#}
-{#            e.stopPropagation();#}
-{#        });#}
-{##}
-{#        $("body").click(function () { // binding onclick to body#}
-{#            $("#nav .selected div div").slideUp(100); // hiding popups#}
-{#            $("#nav .selected").removeClass("selected");#}
-{#        });#}
-{##}
-{#    });#}
-{#    </script>#}
 </head>
 <body>
-
 <div class="ui inverted tiered menu">
-{#    <div class="menu">#}
-{#        <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">#}
-{#    </div>#}
-  <div class="right menu">
-    <div class="ui simple dropdown item">
-    <img src="/static/images/tack.jpg" alt="tack" width="50" height="50"><i class="dropdown icon"></i>
-    <div class="menu">
-        <a class="item" href="/createtack">Create Tack</a>
-        <a class="item" href="/createboard">Create Board</a>
-      </div>
+    <div class="right menu">
+        <div class="item">
+            <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
+        </div>
+        <div class="item">
+            <a class="item" href="/">
+                <i class="home icon"></i> Home
+            </a>
+        </div>
+        <div class="ui simple dropdown item">
+            <i class="bookmark icon"></i>Actions<i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="/createtack">Create Tack</a>
+                <a class="item" href="/createboard">Create Board</a>
+            </div>
+        </div>
+        <div class="ui simple dropdown item">
+            <i class="user icon"></i>User<i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="/logout">Logout</a>
+                <a class="item" href="/update">Update Profile</a>
+            </div>
+        </div>
     </div>
-    <div class="ui simple dropdown item">
-      <img src="/static/images/gravatar.jpg" alt="profile" width="50" height="50"><i class="dropdown icon"></i>
-        <div class="menu">
-        <a class="item" href="/logout">Logout</a>
-        <a class="item" href="/update">Update Profile</a>
-      </div>
-    </div>
-  </div>
 </div>
+<section class="container">
+    <div id="wrapper">
+        <div class="ui large blue label">Your Boards</div>
+        <div class = "ui five column grid">
+            {% for board in privateBoards %}
+                <div class="column">
+                    <div class="ui segment">
+                        <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
+                            <div class="image">
+                                <img class="rounded ui image" src="/static/images/board4.png" alt='No Image' width="200" height="200">
+                                <h2><span>{{ board.Name }}</span></h2>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
+<hr>
+<section>
+    <div id="wrapper">
+        <div class="ui large blue label">Public Boards</div>
+        <div class = "ui five column grid">
+            {% for board in publicBoards %}
+                <div class="column">
+                    <div class="ui segment">
+                        <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
+                            <div class="image">
+                                <img class="rounded ui image" src="/static/images/board4.png"src="/static/images/board2.png" alt='No Image' width="200" height="200">
+                                <h2><span>{{ board.Name }}</span></h2>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 
-{#<div class="container">#}
-{#        <section>#}
-{#            <div id="container_demo">#}
-{#                <div id="wrapper">#}
-{#                    <div id="dashboard" class="animate">#}
-{#                        <div class="ui top sidebar">#}
-{#                            <span>#}
-{#                                <ul id="nav" class="menu">#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li ><div align="left"><img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50"></div></li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>#}
-{#                                    <li><a href="#"><img src="/static/images/tack.jpg" alt="tack" width="50" height="50"> </a>#}
-{#                                        <div class="subs">#}
-{#                                            <div>#}
-{#                                                <ul>#}
-{#                                                    <li><a href="/createtack"><h3>Create Tack</h3></a>#}
-{#                                                    </li>#}
-{#                                                    <li><a href="/createboard"><h3>Create Board</h3></a>#}
-{#                                                    </li>#}
-{#                                                    <li><h3>Create From Url</h3>#}
-{#                                                    </li>#}
-{#                                                </ul>#}
-{#                                            </div>#}
-{#                                        </div>#}
-{#                                    </li>#}
-{#                                </ul>#}
-{#                                <ul id="nav">#}
-{#                                    <li><a href="#"><img src="/static/images/gravatar.jpg" alt="profile" width="50" height="50"> </a>#}
-{#                                        <div class="subs">#}
-{#                                            <div>#}
-{#                                                <ul>#}
-{#                                                    <li><a href="/logout"><h3>Logout</h3></a></li>#}
-{#                                                    <li><a href="/update"><h3>Update Profile</h3> </a></li>#}
-{#                                                </ul>#}
-{#                                            </div>#}
-{#                                        </div>#}
-{#                                    </li>#}
-{#                                </ul>#}
-{#                            </span>#}
-{#                        </div>#}
-                    <section class="container">
-                        <div id="wrapper">Your Boards
-                        <div class = "ui five column grid">
-
-                                {% for board in privateBoards %}
-                                    <div class="column">
-                                    <div class="ui segment">
-                                     <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
-                                            <div class="image">
-                                                <img src="/static/images/board2.png" alt='No Image' width="200" height="200">
-                                                <h2><span>{{ board.Name }}</span></h2>
-                                            </div>
-                                      </a>
-                                    </div>
-                                    </div>
-                                {% endfor %}
-
-                        </div>
-{#                                          {% for board in privateBoards %}#}
-{##}
-{#                                          <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>#}
-{#                                            <div class="image">#}
-{#                                                <img src="/static/images/board2.png" alt='No Image' width="200" height="200">#}
-{#                                                <h2><span>{{ board.Name }}</span></h2>#}
-{#                                            </div>#}
-{#                                            </a>#}
-{#                                          {% endfor %}#}
-                        </div>
-                    </section>
-                    <hr>
-                    <section>
-                        <div id="wrapper">Public Boards:
-
-                                {% for board2 in publicBoards %}
-                                <a id="board_ref" href="/board?boardName={{ board2.Name }}"  title={{ board2.Name }}>
-                                <div class="image">
-                                    <img src="/static/images/board2.png" alt='No Image' width="200" height="200">
-                                    <h2><span>{{ board2.Name }}</span></h2>
-                                </div>
-                                </a>
-                                {% endfor %}
-
-                        </div>
-                    </section>
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </section>#}
-{#    </div>#}
 </body>
 </html>
