--- a/tack/static/css/demo.css
+++ b/tack/static/css/demo.css
@@ -79,7 +79,7 @@ a{
     text-align: center;
 }
 .container > header h1{
-	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'BebasNeueRegular', Cambria, Arial, sans-serif;
 	font-size: 35px;
 	line-height: 35px;
 	position: relative;
