Feature added: Create Tack from Url

--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -43,6 +43,8 @@
             <div class="menu">
                 <a class="item" href="/createtack">Create Tack</a>
                 <a class="item" href="/createboard">Create Board</a>
+                <a class="item" href="/newurltack">Create Tack from Url</a>
+
             </div>
         </div>
         <div class="ui simple dropdown item">
