--- a/tack/Templates/CreatetackFromUrl.html
+++ b/tack/Templates/CreatetackFromUrl.html
@@ -117,6 +117,7 @@
                 <a class="item" href="/createtack">Create Tack</a>
                 <a class="item" href="/createboard">Create Board</a>
                 <a class="item" href="/newurltack">Create Tack from Url</a>
+
             </div>
         </div>
         <div class="ui simple dropdown item">
@@ -133,17 +134,11 @@
         <div id="container_demo">
             <div id="wrapper">
                 <div id="createtack" class="ui form segment" >
-                    <form action="/saveTack" method="post" enctype="multipart/form-data">
+                    <form action="/UrlsaveTack" method="post" enctype="multipart/form-data">
                         <div class="field">
                             <label for="tack_name">Filename:</label>
                             <div class="input">
                                 <input type="text" name="tack_name" placeholder="Name for your Tack"></br>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <label for="file">Image:</label>
-                            <div class="input">
-                                <input type="file" name="file" id="file" required="required" accept="image/*"><br>
                             </div>
                         </div>
                         <div class="field">
