--- a/tack/Templates/ShareBoard.html
+++ b/tack/Templates/ShareBoard.html
@@ -22,6 +22,7 @@
             <div class="menu">
                 <a class="item" href="/createtack">Create Tack</a>
                 <a class="item" href="/createboard">Create Board</a>
+                <a class="item" href="/newurltack">Create Tack from Url</a>
             </div>
         </div>
         <div class="ui simple dropdown item">
