Updated Security and Email management

--- a/tack/Templates/CreatetackFromUrl.html
+++ b/tack/Templates/CreatetackFromUrl.html
@@ -123,8 +123,9 @@
         <div class="ui simple dropdown item">
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
-                <a class="item" href="/logout">Logout</a>
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/logout">Logout</a>
+                <a class="item" href="/manageemail">EMail Management</a>
             </div>
         </div>
     </div>
