--- a/tack/Templates/updateprofile.html
+++ b/tack/Templates/updateprofile.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>Update Profile</title>
 </head>
 <body>
 <div class="ui inverted tiered menu">
@@ -37,8 +37,8 @@
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/manageemail">Email Management</a>
                 <a class="item" href="/logout">Logout</a>
-                <a class="item" href="/manageemail">EMail Management</a>
             </div>
         </div>
     </div>
