--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
     <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/style4.css" />
     <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">
     <script type="text/javascript" src="/static/shadowbox/shadowbox.js"></script>
@@ -51,8 +52,9 @@
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/manageemail">Email Management</a>
                 <a class="item" href="/logout">Logout</a>
-                <a class="item" href="/manageemail">EMail Management</a>
+
             </div>
         </div>
     </div>
