--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -5,14 +5,14 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
-            $("#submitboard").click(function(){
+            $("#submitBoard").click(function(){
                 event.preventDefault();
                 var data = $('form#boardform').serialize();
                 $.post('/saveBoard', data, function(msg) {
                     if (msg.result == "success"){
                         $("#boardform").fadeOut(500);
                         var bn = (document).getElementById("newboardname").value;
-                        var n = (document).getElementById("newboard");
+                        var n = (document).getElementById("new_board");
                         n.value = bn;
                     }
                     else {
@@ -26,7 +26,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             //open popup
-            $("#createBoard").click(function(){
+            $("#createBoardForm").click(function(){
                 $("#boardform").fadeIn(1000);
                 positionPopup();
             });
@@ -80,12 +80,12 @@
     </style>
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-
-    <script type="text/javascript">
-        $('.ui.selection.dropdown')
-            .dropdown()
-        ;
-    </script>
+{##}
+{#    <script type="text/javascript">#}
+{#        $('.ui.selection.dropdown')#}
+{#            .dropdown()#}
+{#        ;#}
+{#    </script>#}
     <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
     <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">
@@ -122,8 +122,9 @@
         <div class="ui simple dropdown item">
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
-                <a class="item" href="/logout">Logout</a>
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/manageemail">Email Management</a>
+                <a class="item" href="/logout">Logout</a>
             </div>
         </div>
     </div>
@@ -178,8 +179,8 @@
                                                             {% endfor %}
                                                         </select><br>
                         </div>
-                        <a href="#" id="createBoard"> OR Create New Board</a>
-                        <input id="newboard" name="new_board" type="hidden">
+                        <a href="#" id="createBoardForm"> OR Create New Board</a>
+                        <input id="new_board" name="new_board" type="hidden">
                         <br />
 
                         <input class="ui button blue" type="submit" name="submit" value="Create!">
@@ -198,9 +199,9 @@
     <label for="board_desc">Description:</label>
     <input type="text" name="board_desc" placeholder="Description for your Board"></br>
     <label for="board_privacy">Board Visibility:</label><br>
-    <input type="radio" name="board_privacy" value="private">Private
-    <input type="radio" name="board_privacy" value="public">Public<br>
-    <input class="ui button blue" id="submitboard" type="button" name="submitboard" value="Create Board!"><br>
+    <input type="radio" name="board_privacy" value="Private">Private
+    <input type="radio" name="board_privacy" value="Public">Public<br>
+    <input class="ui button blue" id="submitBoard" type="button" name="submitBoard" value="Create Board!"><br>
     <a href="#" id="close">Close</a>
 </form>
 
