--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -31,17 +31,26 @@
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/manageemail">Email Management</a>
                 <a class="item" href="/logout">Logout</a>
-                <a class="item" href="/manageemail">EMail Management</a>
             </div>
         </div>
     </div>
 </div>
 <section class="container">
     <div id="wrapper">
-        <div class="ui large blue label">Your Boards</div>
+        <div class="ui large blue label">Boards you created:</div>
         <div class = "ui five column grid">
-            {% for board in privateBoards %}
+            <div class="column">
+                    <div class="ui segment">
+                        <a id="board_ref" href="/createboard">
+                            <div class="image">
+                                <i class="massive black add sign icon"></i>
+                            </div>
+                        </a>
+                    </div>
+            </div>
+            {% for board in yourBoards %}
                 <div class="column">
                     <div class="ui segment">
                         <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
@@ -59,14 +68,14 @@
 <hr>
 <section>
     <div id="wrapper">
-        <div class="ui large blue label">Public Boards</div>
+        <div class="ui large blue label">Boards you follow:</div>
         <div class = "ui five column grid">
-            {% for board in publicBoards %}
+            {% for board in otherBoards %}
                 <div class="column">
                     <div class="ui segment">
                         <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
                             <div class="image">
-                                <img class="rounded ui image" src="/static/images/board4.png"src="/static/images/board2.png" alt='No Image' width="200" height="200">
+                                <img class="rounded ui image" src="/static/images/board4.png" alt='No Image' width="200" height="200">
                                 <h2><span>{{ board.Name }}</span></h2>
                             </div>
                         </a>
