--- a/tack/Templates/ShareBoard.html
+++ b/tack/Templates/ShareBoard.html
@@ -29,8 +29,8 @@
             <i class="user icon"></i>User<i class="dropdown icon"></i>
             <div class="menu">
                 <a class="item" href="/update">Update Profile</a>
+                <a class="item" href="/manageemail">Email Management</a>
                 <a class="item" href="/logout">Logout</a>
-                <a class="item" href="/manageemail">EMail Management</a>
             </div>
         </div>
     </div>
